# pydriosm

./: .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  releases.md  requirements.txt  setup.cfg  setup.py
OSM-Python-utils/: osm_psql.py  read_GeoFabrik.py  utils.py
code/: download.py  download_BBBike.py  download_GeoFabrik.py  psql.py  read.py  read_GeoFabrik.py  settings.py  utilities.py  utils.py
dat/: BBBike-downloads-dictionary.pickle  BBBike-subregion-index.pickle  subregion-downloads-index.json  subregion-downloads-index.pickle  subregion-index.pickle  subregion-url-index.json  subregion-url-index.pickle
dat0/: BBBike-subregion-index.pickle  subregion-downloads-index.json  subregion-downloads-index.pickle  subregion-url-index.pickle
docs/source/: acknowledgement.rst  conf.py  contributors.rst  downloader.rst  errors.rst  index.rst  installation.rst  introduction.rst  ios.rst  latexindex.rst  license.rst  modules.rst  quick-start.rst  reader.rst  rtd-req.txt  settings.rst  updater.rst  utils.rst
misc/: osm-layer-features.vsdx
pydirosm/: download_BBBike.py  download_GeoFabrik.py  osm_psql.py  read_GeoFabrik.py  settings.py  utils.py
pydriosm/: __init__.py  _updater.py  download.py  download_BBBike.py  download_GeoFabrik.py  downloader.py  dump_GeoFabrik.py  errors.py  ios.py  osm_psql.py  read_GeoFabrik.py  reader.py  settings.py  update.py  updater.py  utils.py
pydriosm/dat/: BBBike-cities-coordinates.pickle  BBBike-cities.pickle  BBBike-download-catalogue.pickle  BBBike-download-dictionary.pickle  BBBike-downloads-dictionary.pickle  BBBike-osm-data-types.pickle  BBBike-osm-file-formats.pickle  BBBike-subregion-catalogue.pickle  BBBike-subregion-index.pickle  BBBike-subregion-name-list.pickle  GeoFabrik-continent-subregions.pickle  GeoFabrik-continents-subregion-tables.pickle  GeoFabrik-downloads-catalogue.pickle  GeoFabrik-index-of-all-downloads.pickle  GeoFabrik-no-subregion-list.pickle  GeoFabrik-non-subregion-list.pickle  GeoFabrik-region-subregion-index.json  subregion-downloads-index.json  (+17 more)
tests/: quick_start.py  test_downlaoder.py  test_errors.py  test_ios.py  test_reader.py  test_readme.py  test_updater.py  test_utils.py
(+58 files in other folders)
